tried some stuff

--- a/src/components/HeroCard.astro
+++ b/src/components/HeroCard.astro
@@ -1,13 +1,13 @@
 ---
 import {Image} from "astro:assets";
-import imageOfMe from "../images/13.png";
+import avatarImg from "../images/avatar2.png";
 ---
 
 <div
-  class="flex flex-row gap-4 items-center justify-start bg-stone-900 border border-solid border-stone-800 rounded-xl p-6 hover:shadow-[0_0_1rem_-0.15rem_#11111450] dark:hover:border-stone-900 hover:border-stone-900 transition-all ease-in-out"
+  class="flex flex-row gap-4 items-center justify-start bg-stone-900 border border-solid border-stone-800 rounded-xl p-6 hover:shadow-[0_0_1rem_-0.15rem_#115e5950] dark:hover:border-teal-900/75 hover:border-teal-900/75 transition-all ease-in-out"
 >
   <Image
-    src={imageOfMe}
+    src={avatarImg}
     alt="Image of allen"
     width={90}
     height={90}
